# discord-bots-org.rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
examples/: 01_reqwest_get_bot.rs
src/: endpoints.rs  error.rs  lib.rs  model.rs
src/bridge/: mod.rs
src/bridge/reqwest/: async.rs  mod.rs  sync.rs
src/builder/: bot_search.rs  mod.rs  widget.rs
