[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
categories = ["api-bindings", "web-programming"]
description = "Bindings for the discordbots.org API."
edition = "2018"
keywords = ["discord"]
license = "ISC"
name = "discord-bots-org"
repository = "https://github.com/dabbotorg/discord-bots-org.rs"
version = "0.1.0"

[badges.maintenance]
status = "actively-developed"

[dependencies]
percent-encoding = "1"
serde_json = "1"
url = "1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.futures-preview]
features = ["compat"]
optional = true
version = "0.3.0-alpha.12"

[dependencies.reqwest]
default-features = false
optional = true
version = "0.9"

[dependencies.serde]
features = ["derive"]
version = "1"

[dev-dependencies]
tokio = "0.1"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["reqwest-sync-support"]
reqwest-async-support = ["futures-preview", "reqwest"]
reqwest-sync-support = ["reqwest"]
